# CTranslate2

./: CMakeLists.txt
cli/: CMakeLists.txt
include/ctranslate2/: decoding_utils.h
src/cpu/: backend.cc  kernels.cc  primitives.cc  vec.h
src/layers/: attention.cc
src/models/: model.cc
src/ops/: gemm.cc  gumbel_max.cc  transpose.cc
